add_executable(tp2-reminders
    Reminders.cpp
    Event.h
    Parsing.cpp
    Parsing.h
    MinuteHand.cpp
    MinuteHand.h
    SecondHand.cpp
    SecondHand.h
    Clock.cpp
    Clock.h
)

add_executable(ex2-tp2
    Histogram.cpp
    Histogram.h
)

add_executable(Clock
    MinuteHand.cpp
    MinuteHand.h
    SecondHand.cpp
    SecondHand.h
    Clock.cpp
    Clock.h
)